# homework_13_2

./: README.md  main.py  pyproject.toml
data/: ~$transactions_excel.xlsx
src/: import_data.py  masks.py  remodule.py  utils.py  widget.py
tests/: test_remodule.py
