[project]
name = "homework-13-2"
version = "0.1.0"
description = ""
authors = [
    {name = "aidar",email = "anged@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
